finalizando card de presentacion

--- a/index.html
+++ b/index.html
@@ -5,15 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Proyecto_1</title>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        
-    </header>
-    <main></main>
+    <header class="container">
+        <div class="card-panel teal blue-grey darken-2" id="hero">
+            <div class="row">
+                <div class="col s3 m3 l3 xl3">
+                    <img src="./images/Angel-sanmina.jpg" 
+                    class="circle resposive-img"
+                    id="hero-img" 
+                    alt="Angel-sanmina">
+                </div>
+                <div class="col l9" id="hero-text">
+                    <h5 class="center-align blue-text text-lighten-1">Angel Santillan Brambila</h5>
+                    <p class="">Hola es un gusto conocerlos tengo 25 años y proximmo a cumplir el 7 de marzo
+                    disfruto el aprender cosas nuevas, la curiosidas siempre me mueve y soy algo 
+                    impulsivo aunque trabajo dia a dia para mejorar esto. <br>
+                    Comienzo una nueva aventura en este nuevo mundo de la tecnología a lado de ustedes y espero
+                    nos volvamos cada uno de nosotros los mejores durante ente viaje
+                    </p>
+                    <div class="row">
+                        <div class="col s4 m4 l4 xl4">
+                            <div class="card">
+                                <div class="card-image">
+                                  <img src="./images/ejercicio.jpg" class="hobbies">
+                                </div>
+                                <div class="card-content">
+                                    <span class="card-title center-align green-text">Ejercicio</span>
+                                    <p>Me gusta realizar ejercico creo es una importante
+                                    actividad en el dia dia de cualquier persona debido a sus 
+                                    multiples beneficions
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col s4 m4 l4 xl4">
+                            <div class="card">
+                                <div class="card-image">
+                                  <img src="./images/cocina.jpg" class="hobbies">
+                                </div>
+                                <div class="card-content">
+                                    <span class="card-title center-align green-text">Cocina</span>
+                                    <p>Me encanta elaborar nuevas recetas y aprender nuevas 
+                                        tecnicas para llevarlas a cabo
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col s4 m4 l4 xl4">
+                            <div class="card">
+                                <div class="card-image">
+                                  <img src="./images/tecnologia.jpg" class="hobbies">
+                                </div>
+                                <div class="card-content">
+                                    <span class="card-title center-align green-text">Tecnologia</span>
+                                    <p>Me gusta aprender nuevas cosas sobre la tecnologia, estar
+                                        al pendiente de nuevos inventos, funciones que estas puedan
+                                        obtener y sobretodo me interesa bastante la rama de inteligenicas
+                                        artificales 
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header >
+    <main>
+
+    </main>
     <footer>
 
     </footer>
