Finalizando barra de navegacion

--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
 </head>
 <body>
     <header class="container">
-        <div class="card-panel teal blue-grey darken-2" id="hero">
+        <nav>
+            <div class="nav-wrapper teal darken-4">
+              <a href="./index.html" class="right">
+                <i class="material-icons" id="home">home</i>
+              </a>
+              <ul id="nav-mobile" class="left hide-on-med-and-down">
+                <li><a href="#">About</a></li>
+                <li><a href="./contact.html">Contacto</a></li>
+                <li><a href="#">Pagina1</a></li>
+              </ul>
+            </div>
+        </nav>
+        <div class="card-panel blue-grey darken-2" id="hero">
             <div class="row">
                 <div class="col s3 m3 l3 xl3">
                     <img src="./images/Angel-sanmina.jpg" 
