--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,45 @@
             </div>
         </nav>
     </header>
-    <main class="container">
+    <main class="section container">
+        <div class="row">
+            <form class="col s12 m12 l12 xl12 ">
+                <div class="row card-panel blue-grey darken-1">
+                    <div class="input-field col s6 m6 l6 xl6">
+                        <i class="material-icons prefix" >account_circle</i>
+                        <input type="text" id="first-name" class="validate" required>
+                        <label for="first-name">Nombre:</label>
+                    </div>
+                    <div class="input-field col s6 m6 l6 xl6">
+                        <i class="material-icons prefix" >account_circle</i>
+                        <input type="text" id="last-name" class="validate" required>
+                        <label for="last-name">Apellido:</label>
+                    </div>
+                    <div class="input-field col s6 m6 l6 xl6">
+                        <i class="material-icons prefix" >contact_mail</i>
+                        <input type="email" id="email" class="validate" required>
+                        <label for="email">Email:</label>
+                    </div>
+                    <div class="input-field col s6 m6 l6 xl6">
+                        <i class="material-icons prefix" >contact_phone</i>
+                        <input type="text" id="telefono" class="validate" required>
+                        <label for="telefono">Telefono:</label>
+                    </div>
+                    <div class="input-field col s12 m12 l12 xl12">
+                        <i class="material-icons prefix" >title</i>
+                        <input type="text" id="titulo" class="validate" required>
+                        <label for="titulo">Titulo:</label>
+                    </div>
+                    <div class="input-field col s12 m12 l12 xl12">
+                        <i class="material-icons prefix">mode_edit</i>
+                        <textarea id="info" 
+                        class="materialize-textarea validate" required></textarea>
+                        <label for="info">Descripcion</label>
+                    </div>
+                    <button class="btn" type="submit" >Enviar</button>                                        
+                </div>
+            </form>
+        </div>
     </main>
     <footer class="page-footer teal darken-3" id="footer">
         <div class="container">
@@ -64,5 +102,6 @@
             </div>
           </div>        
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
