--- a/contact.html
+++ b/contact.html
@@ -4,128 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Document</title>
 </head>
 <body>
-    <header class="container bg-dark">
-        <div class="nav nav-tabs align-self-end">
-            <li class="nav-item">
-                <a class="nav-link" href="./index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./contact.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item mr5">
-                <a class="nav-link" href="#">Page1</a>
-            </li>
-            <li class="nav-item">
-                <form class="form-inline">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </li>
-            
-        </div>
-    </header>
-    <main class="container bg-success text-white">
-        <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
-        <p class="text-center w-responsive mx-auto mb-5">
-            Si necesitas ayuda o tienes alguna duda y/o comentario por favor háznoslo saber
-            a través de nuestro siguiente formulario
-        </p>    
-        <div class="row">
-            <div class="col-md-9 mb-md-0 mb-5">
-                <form id="contact-form" name="contact-form" action="mail.php" method="POST">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="md-form mb-0">
-                                <input type="text" id="name" name="name" class="form-control">
-                                <label for="name" class="">Nombre</label>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="md-form mb-0">
-                                <input type="text" id="email" name="email" class="form-control">
-                                <label for="email" class="">Email</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="md-form mb-0">
-                                <input type="text" id="subject" name="subject" class="form-control">
-                                <label for="subject" class="">Titulo</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="md-form">
-                                <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
-                                <label for="message">Mensaje</label>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-                <div class="text-center text-md-left">
-                    <a class="btn btn-primary">Enviar</a>
-                </div>
-                <div class="status"></div>
-            </div>
-            <div class="col-md-3 text-center">
-                <ul class="list-unstyled mb-0">
-                    <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                        <p>Guadalajara, Jalisco</p>
-                    </li>
-                    <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                        <p>+ 52 33-25-06-35-80</p>
-                    </li>
-                    <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                        <p>angelsb94@gmail.com</p>
-                    </li>
-                </ul>
-            </div>
-        </div>        
-    </main>
-    <footer class="page-footer">
-        <div class="container-fluid" id="footer-redes">
-            <div class="row align-items-center" id="row-redes">
-                <div class="col-sm-2 col-md-2 col-lg-1">
-                    <a href="https://twitter.com/angelsadefe18" target="_blank">
-                        <img src="./images/twitter.svg" class="img-footer" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-2 col-md-2 col-lg-1">
-                    <a href="https://www.facebook.com/angel.santillanbrambila" target="_blank">
-                        <img src="./images/facebook.svg" class="img-footer" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-2 col-md-2 col-lg-1">
-                    <a href="https://www.instagram.com/angelsantillanbrambila/?hl=es-la" target="_blank">
-                        <img src="./images/instagram.svg" class="img-footer" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-2 col-md-4 col-lg-7 col-xl-6">
-                    <a href="https://github.com/satoshi9394" target="_blank">
-                        <img src="./images/github.svg" class="img-footer" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-2 col-md-1 col-lg-1">    
-                    <p class="text-center" id="footer-title">width</p>
-                    <div class="col"></div>
-                    <img src="./images/ceroUno.png" class="img-fluid" id="cerouno" alt="ceroUno">
-                </div>
-            </div>
-        </div>
-        <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="#" target="_blank"> Angel-Santillan.com</a>
-        </div>
-    </footer>
+    
 </body>
 </html>
